--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["data/**"]
+        "includeFiles": ["Data/**"]
       }
     }
   ],
